// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Task Archived 1`] = `
<div
  className="list-item TASK_ARCHIVED"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={true}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      className="checkbox-custom"
      onClick={[Function]}
    />
    <div
      className="actions"
      onClick={[Function]}
    />
  </label>
</div>
`;

exports[`Storyshots Task Default 1`] = `
<div
  className="list-item TASK_INBOX"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={false}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      className="checkbox-custom"
      onClick={[Function]}
    />
    <div
      className="actions"
      onClick={[Function]}
    >
      <a
        onClick={[Function]}
      >
        <span
          className="icon-star"
        />
      </a>
    </div>
  </label>
</div>
`;

exports[`Storyshots Task Pinned 1`] = `
<div
  className="list-item TASK_PINNED"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={false}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      className="checkbox-custom"
      onClick={[Function]}
    />
    <div
      className="actions"
      onClick={[Function]}
    >
      <a
        onClick={[Function]}
      >
        <span
          className="icon-star"
        />
      </a>
    </div>
  </label>
</div>
`;
